<resources>
    <string name="app_name">Flightwise</string>
    <string name="app_copyright">© 2025 Flightwise</string>

    <string name="countries_main_header">Discover countries</string>
    <string name="countries_main_description">To choose a ticket, you can firstly discover countries here!</string>
    <string name="countries_main_button_text">Find out more</string>

    <string name="flights_main_header">Ready to go</string>
    <string name="flights_main_description">If you know your choice, you can go ahead and buy a ticket!</string>
    <string name="flights_main_button_text">Buy a ticket</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_tickets">Tickets</string>
    <string name="menu_countries">Countries</string>
    <string name="menu_about">About</string>

    <string name="countries_search_placeholder">Search for countries</string>
    <string name="message_nothing_found">Nothing was found</string>

    <string name="flights_from_placeholder">From</string>
    <string name="flights_to_placeholder">To</string>
    <string name="flights_leave_date_placeholder">Date of leaving</string>
    <string name="flights_return_date_placeholder">Date of return</string>
    <string name="flights_passengers_placeholder">Number of passengers</string>
    <string name="search_button_text">Search</string>
    <string name="error_message_fill_form">Please, fill the form</string>
    <string name="error_message_data_wrong">Please, check filled data</string>
    <string name="luggage_checkbox_text">With luggage</string>

    <string name="error_all_fields_required">All fields are required</string>
    <string name="error_incorrect_date_format">Incorrect date format</string>

    <string name="flight_price_for_passengers">Price for %d passengers</string>
    <string name="flight_price_for_passenger">Price for %d passenger</string>

    <string name="name_placeholder">Name</string>
    <string name="surname_placeholder">Surname</string>
    <string name="passport_number_placeholder">Passport number</string>
    <string name="birth_date_placeholder">Birth date</string>
    <string name="add_button_text">Add</string>
    <string name="continue_button_text">Continue</string>

    <string name="payment_header">Choose payment method</string>
    <string name="payment_paypal">Paypal</string>
    <string name="payment_card">Card</string>

    <string name="profile_passenger_role">Passenger</string>
    <string name="profile_tickets_text">Your tickets</string>

    <string name="auth_username_placeholder">Username</string>
    <string name="auth_password_placeholder">Password</string>
    <string name="auth_confirm_password_placeholder">Confirm password</string>
    <string name="error_message_auth_failed">Authentication failed</string>
    <string name="auth_login_text">Login</string>
    <string name="auth_register_text">Register</string>
    <string name="auth_register_to_login">Already have an account?</string>
    <string name="auth_login_to_register">Do not have an account yet?</string>
    <string name="auth_error_password_mismatch">Passwords do not match.</string>
    <string name="auth_error_not_filled_inputs">Please fill in all fields.</string>
    <string name="auth_error_registration_failed">Registration failed.</string>

    <string name="about_heading">Flightwise is a ticket-search application</string>
    <string name="about_creators_text">This app was created by</string>
    <string name="team_members">Raitsyna Yuliya, Filippov Cyril, Senkevich Stanislau</string>

    <string name="ticket_not_found">Ticket not found.</string>
    <string name="cancel_button_text">Cancel</string>
</resources>